--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
 # LLM Configuration
-LLM_TYPE=azure_openai  # or "openai"
+# LLM_TYPE options: "azure_openai" | "openai" | "gemini"
+LLM_TYPE=openai
+
+# Azure OpenAI (required when LLM_TYPE=azure_openai)
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key
-OPENAI_API_KEY=your-openai-key
+AZURE_OPENAI_API_KEY=your-azure-api-key
 LLM_API_VERSION=2025-01-01-preview
+
+# OpenAI (required when LLM_TYPE=openai)
+OPENAI_API_KEY=your-openai-api-key
+
+# Google Gemini (required when LLM_TYPE=gemini)
+GOOGLE_API_KEY=your-google-api-key
+
+# Model name (deployment name for Azure, model ID for OpenAI/Gemini)
 LLM_MODEL_NAME=gpt-4o
 
 # OmniParser Configuration
@@ -22,3 +32,7 @@ AGENT_MAX_RETRIES=3
 
 # Screenshot Configuration
 SCREENSHOT_DIR=/tmp/browser_agent_screenshots
+
+# Wanfang Login Credentials (for auto-login feature)
+WANFANG_USERNAME=your-username
+WANFANG_PASSWORD=your-password
