--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langgraph>=0.5.3
 langchain-core>=0.3.68
 langchain-openai>=0.3.28
+openai>=1.0.0
 
 # Browser Automation
 playwright>=1.49.0
@@ -16,6 +17,7 @@ safetensors>=0.4.0
 Pillow>=10.0.0
 numpy>=1.24.0
 opencv-python>=4.8.0
+easyocr>=1.7.0
 
 # Data Models
 pydantic>=2.0.0
